--- a/pom.xml
+++ b/pom.xml
@@ -24,25 +24,23 @@
     </license>
   </licenses>
 
-  <!--
-    <scm>
-      <connection>
-        scm:git:https://github.com/TODO
-      </connection>
-      <developerConnection>
-        scm:git:git@github.com:TODO
-      </developerConnection>
-      <url>
-        https://github.com/TODO
-      </url>
-      <tag>HEAD</tag>
-    </scm>
+  <scm>
+    <connection>
+      scm:git:https://github.com/marcelmay/lib-mobi.git
+    </connection>
+    <developerConnection>
+      scm:git:git@github.com:marcelmay/lib-mobi.git
+    </developerConnection>
+    <url>
+      https@github.com:marcelmay/lib-mobi
+    </url>
+    <tag>HEAD</tag>
+  </scm>
 
-    <issueManagement>
-      <system>github</system>
-      <url>https://github.com/TODO</url>
-    </issueManagement>
-  -->
+  <issueManagement>
+    <system>github</system>
+    <url>https://github.com/marcelmay/lib-mobi/issues/</url>
+  </issueManagement>
 
   <developers>
     <developer>
@@ -155,19 +153,19 @@
       </dependency>
       <!-- JSON export -->
       <dependency>
-      	<groupId>com.fasterxml.jackson.core</groupId>
-      	<artifactId>jackson-core</artifactId>
-      	<version>2.6.4</version>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.6.4</version>
       </dependency>
       <dependency>
-      	<groupId>com.fasterxml.jackson.core</groupId>
-      	<artifactId>jackson-annotations</artifactId>
-      	<version>2.6.4</version>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.6.4</version>
       </dependency>
       <dependency>
-      	<groupId>com.fasterxml.jackson.core</groupId>
-      	<artifactId>jackson-databind</artifactId>
-      	<version>2.6.4</version>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.6.4</version>
       </dependency>
       <!-- Test scope -->
       <dependency>
