--- a/pom.xml
+++ b/pom.xml
@@ -2,238 +2,238 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <name>libmobi</name>
-  <description>Library for reading MOBI headers</description>
-  <inceptionYear>2016</inceptionYear>
+    <modelVersion>4.0.0</modelVersion>
+    <name>libmobi</name>
+    <description>Library for reading MOBI headers</description>
+    <inceptionYear>2016</inceptionYear>
 
-  <groupId>de.m3y</groupId>
-  <artifactId>libmobi-parent</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
+    <groupId>de.m3y.libmobi</groupId>
+    <artifactId>libmobi-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-  <licenses>
-    <license>
-      <name>Apache 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+    <licenses>
+        <license>
+            <name>Apache 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
-  <scm>
-    <connection>
-      scm:git:https://github.com/marcelmay/lib-mobi.git
-    </connection>
-    <developerConnection>
-      scm:git:git@github.com:marcelmay/lib-mobi.git
-    </developerConnection>
-    <url>
-      https@github.com:marcelmay/lib-mobi
-    </url>
-    <tag>HEAD</tag>
-  </scm>
+    <scm>
+        <connection>
+            scm:git:https://github.com/marcelmay/lib-mobi.git
+        </connection>
+        <developerConnection>
+            scm:git:git@github.com:marcelmay/lib-mobi.git
+        </developerConnection>
+        <url>
+            https@github.com:marcelmay/lib-mobi
+        </url>
+        <tag>HEAD</tag>
+    </scm>
 
-  <issueManagement>
-    <system>github</system>
-    <url>https://github.com/marcelmay/lib-mobi/issues/</url>
-  </issueManagement>
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/marcelmay/lib-mobi/issues/</url>
+    </issueManagement>
 
-  <developers>
-    <developer>
-      <name>Marcel May</name>
-      <id>mm</id>
-      <properties>
-        <id>marcel_may</id>
-      </properties>
-      <email>marcel (dot) may (dot) de (at) gmail.com</email>
-      <url>https://github.com/marcelmay</url>
-    </developer>
-  </developers>
+    <developers>
+        <developer>
+            <name>Marcel May</name>
+            <id>mm</id>
+            <properties>
+                <id>marcel_may</id>
+            </properties>
+            <email>marcel (dot) may (dot) de (at) gmail.com</email>
+            <url>https://github.com/marcelmay</url>
+        </developer>
+    </developers>
 
-  <modules>
-    <module>lib</module>
-    <module>standalone</module>
-  </modules>
+    <modules>
+        <module>core</module>
+        <module>standalone</module>
+    </modules>
 
-  <build>
-    <defaultGoal>install</defaultGoal>
+    <build>
+        <defaultGoal>install</defaultGoal>
 
-    <!-- Plugin defaults for all inherited POMs. Declare the plugin version here, too. -->
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <!-- http://maven.apache.org/plugins/maven-compile-plugin/plugin-info.html -->
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
-          <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-            <debug>true</debug>
-            <compilerArgs>
-              <arg>-Xlint</arg>
-            </compilerArgs>
-          </configuration>
-        </plugin>
-        <plugin>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <version>3.0.0-M3</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-install-plugin</artifactId>
-          <version>3.0.0-M1</version>
-        </plugin>
-        <plugin>
-          <!-- http://maven.apache.org/plugins/maven-surefire-plugin/plugin-info.html -->
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>3.0.0-M4</version>
-          <configuration>
-            <forkCount>1</forkCount>
-            <reuseForks>true</reuseForks>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.0</version>
-          <configuration>
-            <archive>
-              <addMavenDescriptor>true</addMavenDescriptor>
-            </archive>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.1.2</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.2.0</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0-M1</version>
-        </plugin>
-        <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>3.1.0</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-shade-plugin</artifactId>
-          <version>3.2.3</version>
-        </plugin>
-        <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-            <version>3.2.1</version>
-        </plugin>
-        <plugin>
-            <artifactId>maven-site-plugin</artifactId>
-            <version>3.9.0</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-
-    <plugins>
-        <plugin>
-            <artifactId>maven-enforcer-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>enforce-maven</id>
-                    <goals>
-                        <goal>enforce</goal>
-                    </goals>
+        <!-- Plugin defaults for all inherited POMs. Declare the plugin version here, too. -->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <!-- http://maven.apache.org/plugins/maven-compile-plugin/plugin-info.html -->
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
                     <configuration>
-                        <rules>
-                            <requireMavenVersion>
-                                <version>3.6</version>
-                            </requireMavenVersion>
-                        </rules>
+                        <source>1.8</source>
+                        <target>1.8</target>
+                        <testSource>1.8</testSource>
+                        <testTarget>1.8</testTarget>
+                        <compilerArgument>-Xlint:all</compilerArgument>
+                        <showWarnings>true</showWarnings>
+                        <showDeprecation>true</showDeprecation>
+                        <optimize>true</optimize>
                     </configuration>
-                </execution>
-            </executions>
-        </plugin>
-     </plugins>
-  </build>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.0.0-M3</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+                <plugin>
+                    <!-- http://maven.apache.org/plugins/maven-surefire-plugin/plugin-info.html -->
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.2.0</version>
+                    <configuration>
+                        <archive>
+                            <addMavenDescriptor>true</addMavenDescriptor>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.1.2</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.2.0</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                    <configuration>
+                        <releaseProfiles>release</releaseProfiles>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>3.0.0-M1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.1.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>3.2.3</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>3.2.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.9.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
-  <dependencyManagement>
-    <dependencies>
-      <!-- Own dependencies -->
-      <dependency>
-        <groupId>de.m3y</groupId>
-        <artifactId>libmobi-lib</artifactId>
-        <version>1.0-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>de.m3y</groupId>
-        <artifactId>libmobi-standalone</artifactId>
-        <version>1.0-SNAPSHOT</version>
-      </dependency>
-      <!-- JSON export -->
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>2.11.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-annotations</artifactId>
-        <version>2.11.0</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-databind</artifactId>
-        <version>2.11.0</version>
-      </dependency>
-      <!-- Test scope -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <profiles>
-    <profile>
-      <id>release</id>
-      <build>
         <plugins>
-          <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-sources</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>attach-javadocs</id>
-                <goals>
-                  <goal>jar</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.6</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
-      </build>
-    </profile>
+    </build>
 
-  </profiles>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- Own dependencies -->
+            <dependency>
+                <groupId>de.m3y.libmobi</groupId>
+                <artifactId>libmobi-core</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>de.m3y.libmobi</groupId>
+                <artifactId>libmobi-standalone</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <!-- JSON export -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>2.11.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>2.11.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.11.0</version>
+            </dependency>
+            <!-- Test scope -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.13</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
