--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>de.m3y.libmobi</groupId>
     <artifactId>libmobi-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <licenses>
         <license>
@@ -30,7 +30,7 @@
         <url>
             https@github.com:marcelmay/lib-mobi
         </url>
-        <tag>HEAD</tag>
+        <tag>release-1.0.1</tag>
     </scm>
 
     <issueManagement>
@@ -182,12 +182,12 @@
             <dependency>
                 <groupId>de.m3y.libmobi</groupId>
                 <artifactId>libmobi-core</artifactId>
-                <version>1.1-SNAPSHOT</version>
+                <version>1.0.1</version>
             </dependency>
             <dependency>
                 <groupId>de.m3y.libmobi</groupId>
                 <artifactId>libmobi-standalone</artifactId>
-                <version>1.1-SNAPSHOT</version>
+                <version>1.0.1</version>
             </dependency>
             <!-- JSON export -->
             <dependency>
