--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -6,12 +6,12 @@
 
     <artifactId>libmobi-standalone</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.2</version>
+    <version>1.1-SNAPSHOT</version>
 
     <parent>
         <groupId>de.m3y.libmobi</groupId>
         <artifactId>libmobi-parent</artifactId>
-        <version>1.0.2</version>
+        <version>1.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
